add scroller component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <canvas id='c'></canvas>
 <div class="content-container">
 <app-header></app-header>
-<app-content-block *ngFor="let ar of arr"></app-content-block>
+<app-content-scroller></app-content-scroller>
 </div>
 </div>
 
