--- a/src/app/content-block/content-block.component.html
+++ b/src/app/content-block/content-block.component.html
@@ -1,6 +1,6 @@
 <div class="w3-container">
     <div class="w3-center w3-animate-top">
-        <p class="header-text">More more and more info about your favorite stars</p>
+        <p class="header-text">AAAAASSASASASSASASASASS</p>
     </div>
 </div>
 
